--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+//    sourceSets { main { java.srcDirs = ['src/main/java', 'src/test/java/'] } }
+//    sourceSets { main { java.srcDirs = ['src/main/java', 'src/test/java/'] } }
 }
+
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    testCompile 'junit:junit:4.12'
+
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    // required if you want to use Mockito for unit tests
+    testCompile 'org.mockito:mockito-core:1.+'
+    // required if you want to use Mockito for Android instrumentation tests
+    androidTestCompile 'org.mockito:mockito-core:1.+'
+    androidTestCompile "com.google.dexmaker:dexmaker:1.2"
+    androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
 }
